--- a/Jogo1.cbp
+++ b/Jogo1.cbp
@@ -78,6 +78,7 @@
 		</Linker>
 		<Unit filename="include/AnimatedSprite.h" />
 		<Unit filename="include/Animation.h" />
+		<Unit filename="include/Erro.h" />
 		<Unit filename="include/Instrucao.h" />
 		<Unit filename="include/Jogo.h" />
 		<Unit filename="include/Lista.h" />
@@ -89,6 +90,7 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="src/AnimatedSprite.cpp" />
 		<Unit filename="src/Animation.cpp" />
+		<Unit filename="src/Erro.cpp" />
 		<Unit filename="src/Instrucao.cpp" />
 		<Unit filename="src/Jogo.cpp" />
 		<Unit filename="src/Lista.cpp" />
